mobile spacing fix

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -37,7 +37,7 @@
   .home-container h1 {
     font-size: 2.7rem;
     padding-top: 64px;
-    margin-top: 0;
+    margin-top: 24px;
   }
   .sub-heading {
     font-size: 1rem;
